--- a/samples/grid.html
+++ b/samples/grid.html
@@ -45,7 +45,7 @@
 
     <main>
         <!-- AG Grid -->
-        <script src="./ui/grid_library/js/aggrid/ag-grid-enterprise.min.js">
+        <script src="../ui/grid_library/js/aggrid/ag-grid-enterprise.min.js">
         </script>
         <div id="myGrid" class="ag-theme-alpine"></div>
         <script>
@@ -88,9 +88,9 @@
         </script>
 
         <!-- handsontable Grid -->
-        <script src="./ui/grid_library/js/handsontable/handsontable.full.min.js">
+        <script src="../ui/grid_library/js/handsontable/handsontable.full.min.js">
         </script>
-        <link rel="stylesheet" href="./ui/grid_library/js/handsontable/handsontable.full.min.css" />
+        <link rel="stylesheet" href="../ui/grid_library/js/handsontable/handsontable.full.min.css" />
 
         <div id="example"></div>
         <script>
@@ -123,8 +123,8 @@
             })
         </script>
 
-        <link rel="stylesheet" href="./ui/grid_library/js/webix/webix.css" type="text/css">
-        <script src="./ui/grid_library/js/webix/webix.js" type="text/javascript"></script>
+        <link rel="stylesheet" href="../ui/grid_library/js/webix/webix.css" type="text/css">
+        <script src="../ui/grid_library/js/webix/webix.js" type="text/javascript"></script>
         <div id="layout"></div>
         <script>
             document.getElementById("webix").addEventListener("click", (e) => {
