--- a/samples/grid.html
+++ b/samples/grid.html
@@ -83,7 +83,7 @@
             document.getElementById("aggrid").addEventListener('click', () => {
                 const gridDiv = document.querySelector('#myGrid');
                 const aggrid = new agGrid.Grid(gridDiv, gridOptions);
-                globalThis.aggrid = aggrid;
+                // globalThis.aggrid = aggrid;
             });
         </script>
 
@@ -119,7 +119,7 @@
                     },
                     licenseKey: 'non-commercial-and-evaluation' // for non-commercial use only
                 });
-                globalThis.hot = hot;
+                // globalThis.hot = hot;
             })
         </script>
 
