기존 소스 날아감..

--- a/samples/diagram.html
+++ b/samples/diagram.html
@@ -16,7 +16,7 @@
 <body style="margin: 0; width: 100vw; height: 100vh;">
     <div id="app" style="margin: 0; width: 100%; height: 100%;"></div>
 
-    <script src="./ui/diagram/js/go.js"></script>
+    <script src="../ui/diagram/js/go.js"></script>
 
     <script type="text/javascript">
 
