--- a/samples/water.html
+++ b/samples/water.html
@@ -35,7 +35,7 @@
         @media (max-width: 500px) {
 
             #watermark {
-                background-image: url("ui/watermark/water.png");
+                background-image: url("../ui/watermark/water.png");
             }
         }
     </style>
